public/stylesheets/style.css
* {
  font-size:20px;
}
body
{
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;



}
#counter{
  margin-left: 50px;
}
.ui-tabs .ui-tabs-nav .ui-tabs-anchor
{
  background-color: lightsteelblue;
}
.ui-tabs .ui-tabs-nav
{
  background-color: darkmagenta;
}

.taskName > form
{
  display: inline;

}
#tabs{
  background-color: white;
}
#full-body
{
  background-color: lightsteelblue;
  height: 1000px;
  width: 1200px;
  margin-left: -30px;
  border-style: solid;
  border-color: darkmagenta;
}
h1
{

  background-color: darkmagenta;
  padding-left: 30px;
  padding-top: -20px;


}
.Done{
  margin-left: 130px;
  background-color: whitesmoke;

}
.delete
{
  margin-left: 80px;
  background-color: whitesmoke;
}
.task-list{
  padding-left: 300px;
}
.taskName
{
  margin-left: 80px;
  width: 40px;
}
p{
  color: black;
}

#new_task_text
{

  width:450px;
  margin-left: 160px;
}
#mark_all_done__button
{
  margin-left: 160px;
  background-color: whitesmoke;
}

#new_task_button{
  background-color: whitesmoke;

}

li{
  list-style: none;
}
/* horizontal break*/
.hr-sect
{
  display: flex;
  flex-basis: 100%;
  align-items: center;
  color: darkmagenta;
  margin: 8px 0px;
}
.hr-sect::before,
.hr-sect::after {
  content: "";
  flex-grow: 1;
  background: darkmagenta;
  height: 1px;
  font-size: 0px;
  line-height: 0px;
  margin: 0px 8px;
}

